名单回溯功能代码初始化

--- a/AMLServerProj5.1_TMP/.classpath
+++ b/AMLServerProj5.1_TMP/.classpath
@@ -99,5 +99,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/ibp-search-20170522-jar-with-dependencies.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
